--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -40,7 +40,6 @@
                         <img class="logo" src="./assets/logo_negativo.png" alt="logo">
                         <h1>Cámaras de maduración de banano</h1>
                         <h2>Un negocio rentable en el boom agrícola</h2>
-                        <a href="#contacto">información</a>
 
                     </div>
                 </div>
@@ -50,181 +49,117 @@
 
     </header>
 
+    <section class="section_1">
+        <h2>Se abren las oportunidades para todo <span>inversor visionario</span>
+        </h2>
 
-
+    </section>
     <main>
-
-        <section class="section_data">
-            <div>
-                <img src="./assets/vertical.jpg" alt="empresario">
-            </div>
-
-            <div class="text_data">
-                <h3>BENEFICIOS</h3>
-                <p>En pleno auge de la <strong>Agricultura peruana</strong>, invertir bien es invertir en las
+        <div class="overlay">
+            <section class="section_2 card">
+                <img src="./assets/cm-005.png" alt="">
+                <p>En <span>pleno auge </span>de la Agricultura peruana, <span>invertir bien</span> es invertir en las
                     necesidades de
-                    un sector que
-                    crece de manera acelerada y que aún pocos inversionistas lo hacen.
-
-                <p>Los que hacen no solo ven
-                    retornar
-                    su <strong>inversión de manera rápida</strong>, sino que multiplican su capital</p>
-                <p>Muchos invierten en sembrar y pocos invierten en <strong>satisfacer las necesidades</strong> de los
-                    que
-                    siembran y del
-                    producto cosechado: ¡Los servicios de conservación y maduración!</p>
-                <p>Ahí es donde la demanda <strong>supera a la oferta</strong> y se abren las oportunidades para todo
-                    inversor visionario.
+                    un
+                    sector que
+                    <span>crece
+                        de manera acelerada</span> y que aún pocos inversionistas lo hacen.
                 </p>
-                <p>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un <strong>sector en
-                        crecimiento</strong>? </p>
-            </div>
-        </section>
+
+            </section>
+
+            <section class="section_3 card">
+                <p>Los que hacen no solo <span>ven retornar su inversión</span> de manera rápida, sino que
+                    <span>multiplican su capital</span>.
+                </p>
+                <img src="./assets/im003.jpeg" alt="">
+
+            </section>
+            <section class="section_4 card">
+                <img src="./assets/banner_img/b_001.jpg" alt="">
+                <p class="typewriter">Muchos invierten en sembrar y pocos invierten en <span>satisfacer las
+                        necesidades</span> de los
+                    que siembran y del
+                    producto cosechado: <span>¡Los servicios de conservación y maduración!</span>
+                    Ahí es donde la demanda supera a la oferta y <span>se abren las oportunidades</span> para todo
+                    inversor
+                    visionario.</p>
+
+            </section>
 
 
-        <section class="bento">
-            <div class="bento-grid">
-                <div class="cell" style="grid-area: one"><video autoplay muted loop
-                        src="./assets/videos/v002.mp4"></video></div>
-                <div class="cell" style="grid-area: two"><img src="./assets/cm-005.png" alt="imagen"></div>
-                <div class="cell" style="grid-area: three"><video autoplay muted loop
-                        src="./assets/videos/v001.mp4"></video></div>
-                <div class="cell" style="grid-area: four"><img src="./assets/im003.jpeg" alt="imagen"></div>
-                <div class="cell" style="grid-area: five"><img src="./assets/im002.jpeg" alt="imagen"></div>
-                <div class="cell" style="grid-area: six"><img src="./assets/im003.jpeg" alt="imagen"></div>
-            </div>
-        </section>
-
-
-
-        <!-- MAILCHIMP -->
-        <section class="container" id="contacto">
-
-            <h3>¡Descubre cómo hacerlo en Nuestro Webinar <strong>Exclusivo</strong>!</h3>
-            <div id="mc_embed_shell">
-                <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-
-                <div id="mc_embed_signup">
-                    <form
-                        action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
-                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                        target="_blank">
-                        <div id="mc_embed_signup_scroll" class="animate-bg">
-                            <h4>Suscríbete</h4>
-                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                            <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
-                                        class="asterisk">*</span></label><input type="email" name="EMAIL"
-                                    class="required email" id="mce-EMAIL" required="" value=""></div>
-                            <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
-                                    name="FNAME" class=" text" id="mce-FNAME" value=""></div>
-                            <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input
-                                    type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
-                            <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
-                            <div id="mce-responses" class="clear foot">
-                                <div class="response" id="mce-error-response" style="display: none;"></div>
-                                <div class="response" id="mce-success-response" style="display: none;"></div>
-                            </div>
-                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
-                            </div>
-                            <div class="optionalParent">
-                                <div class="clear foot">
-                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                        value="Enviar">
-                                    <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
-                                            title="Mailchimp - email marketing made easy and fun"><span
-                                                style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
-                                                    class="refferal_badge"
-                                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                                                    alt="Intuit Mailchimp"
-                                                    style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <script type="text/javascript"
-                    src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-                <script
-                    type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-            </div>
-
-
-        </section>
-        <!-- MAILCHIMP -->
-
-        <!--  -->
-        <section class="slider">
-            <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
-                <div class="parallax-bg" style="
-                      background-image: url(./assets/im003.jpeg);
-                      opacity: 0.2;
-                    " data-swiper-parallax="-23%"></div>
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="title" data-swiper-parallax="-300">Conoce el Potencial de Rentabilidad</div>
-                        <div class="text" data-swiper-parallax="-100">
-                            <p>Aprende sobre el creciente mercado del banano y cómo puedes obtener ganancias tangibles
-                                desde
-                                el
-                                primer día brindando servicios para el sector bananero. </p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="title" data-swiper-parallax="-300">Entiende el Impacto de la Demanda y Oferta</div>
-
-                        <div class="text" data-swiper-parallax="-100">
-                            <p>Obtén información valiosa sobre el crecimiento del consumo de banano en Perú y la demanda
-                                insatisfecha
-                                de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende
-                                cómo esta
-                                brecha
-                                entre la demanda y la oferta puede ser una oportunidad de inversión lucrativa para ti.
-                            </p>
-
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="title" data-swiper-parallax="-300">Descubre una Alternativa Rentable a la
-                            Agricultura Tradicional</div>
-
-                        <div class="text" data-swiper-parallax="-100">
-                            <p>Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción
-                                de
-                                participar
-                                en el negocio de servicios de maduración de banano. Aprende por qué esta alternativa
-                                ofrece
-                                ingresos
-                                constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho
-                                más corto.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="swiper-slide">
-                        <div class="title" data-swiper-parallax="-300">Explora las Ventajas Competitivas del Servicio de
-                            Maduración</div>
-
-                        <div class="text" data-swiper-parallax="-100">
-                            <p>Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo
-                                y
-                                cómo puedes
-                                diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-            </div>
-
-        </section>
-
-
+        </div>
 
     </main>
+    <article class="article">
+        <h2>¡Descubre cómo hacerlo en Nuestro Webinar <strong>Exclusivo</strong>!</h2>
 
+    </article>
+    <article class="contador">
+        <div id="countdown"></div>
+    </article>
+    
+
+    <!-- MAILCHIMP -->
+    <section class="container section_div" id="contacto">
+        <div id="mc_embed_shell">
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+
+            <div id="mc_embed_signup">
+                <form
+                    action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank">
+                    <div id="mc_embed_signup_scroll" class="animate-bg">
+                        <h4>Suscríbete</h4>
+                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                        <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
+                                    class="asterisk">*</span></label><input type="email" name="EMAIL"
+                                class="required email" id="mce-EMAIL" required="" value=""></div>
+                        <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
+                                name="FNAME" class=" text" id="mce-FNAME" value=""></div>
+                        <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input type="text"
+                                name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+                        <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
+                        <div id="mce-responses" class="clear foot">
+                            <div class="response" id="mce-error-response" style="display: none;"></div>
+                            <div class="response" id="mce-success-response" style="display: none;"></div>
+                        </div>
+                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                            <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
+                        </div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                    value="Enviar">
+                                <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
+                                        title="Mailchimp - email marketing made easy and fun"><span
+                                            style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                                class="refferal_badge"
+                                                src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                alt="Intuit Mailchimp"
+                                                style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+            <script
+                type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+        </div>
+
+
+    </section>
+
+    <!-- MAILCHIMP -->
+
+    <section class="section_5">
+        <h2>¿Por qué deberías unirte a nuestro webinar?
+        </h2>
+
+    </section>
 
 
     <footer class="footer">
@@ -278,25 +213,9 @@
 
 
 
-    <!-- SWIPER JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!--  -->
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-            speed: 600,
-            parallax: true,
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-            navigation: {
-                nextEl: ".swiper-button-next",
-                prevEl: ".swiper-button-prev",
-            },
-        });
-    </script>
-
+    <script src="/js/main.js"></script>
 </body>
+
 
 
 
