--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -54,7 +54,7 @@
         </h2>
 
     </section>
-    <main>
+    <main class="main">
         <div class="overlay">
             <section class="section_2 card">
                 <img src="./assets/cm-005.png" alt="">
@@ -98,7 +98,7 @@
     <article class="contador">
         <div id="countdown"></div>
     </article>
-    
+
 
     <!-- MAILCHIMP -->
     <section class="container section_div" id="contacto">
@@ -160,6 +160,10 @@
         </h2>
 
     </section>
+    <section class="section_6">
+
+
+    </section>
 
 
     <footer class="footer">
@@ -214,6 +218,8 @@
 
 
     <script src="/js/main.js"></script>
+    <script
+        id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/8b7f686722931bd734a2e7d9b/5aeb0cfa6f157ecbd99011dc8.js");</script>
 </body>
 
 
