--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -161,7 +161,37 @@
 
     </section>
     <section class="section_6">
+        <div class="accordion">
+            <div class="accordion-item">
+                <div class="accordion-header">✅Conoce el potencial de <span>rentabilidad</span></div>
+                <div class="accordion-content">
+                    <p>📈 Aprende sobre el creciente mercado del <span>banano</span> y cómo puedes obtener ganancias tangibles desde el primer día brindando servicios para el sector bananero.</p>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <div class="accordion-header">✅Entiende el impacto de la <span>Demanda</span> y <span>Oferta</span></div>
+                <div class="accordion-content">
+                    <p>🍌 Obtén información valiosa sobre el crecimiento del consumo de <span>banano</span> en Perú y la demanda insatisfecha de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende cómo esta brecha entre la demanda y la oferta puede ser una oportunidad de inversión <span>lucrativa</span> para ti.</p>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <div class="accordion-header">✅Descubre una <span>Alternativa Rentable</span> a la Agricultura Tradicional</div>
+                <div class="accordion-content">
+                    <p>🚜 Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de participar en el negocio de servicios de maduración de <span>banano</span>. Aprende por qué esta alternativa ofrece ingresos constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho más corto.</p>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <div class="accordion-header">✅Explora las <span>Ventajas Competitivas</span> del Servicio de Maduración</div>
+                <div class="accordion-content">
+                    <p>🔄 Entiende por qué el negocio de maduración de <span>banano</span> ofrece un flujo de ingresos continuo y cómo puedes diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
+                </div>
+            </div>
+        </div>
 
+
+    </section>
+    <section class="section_7">
+        <img src="./assets/cm-007.webp" alt="">
 
     </section>
 
@@ -218,8 +248,7 @@
 
 
     <script src="/js/main.js"></script>
-    <script
-        id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/8b7f686722931bd734a2e7d9b/5aeb0cfa6f157ecbd99011dc8.js");</script>
+
 </body>
 
 
