Update 1era landing

--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -38,8 +38,8 @@
 
                     <div class="text_01">
                         <img class="logo" src="./assets/logo_negativo.png" alt="logo">
-                        <h1>Cámaras de maduración de banano</h1>
-                        <h2>Un negocio rentable en el boom agrícola</h2>
+                        <h2>DESCUBRE EL NEGOCIO RENTABLE DE LAS</h2>
+                        <h1>CÁMARAS DE MADURACIÓN DE BANANO </h1>
 
                     </div>
                 </div>
@@ -48,16 +48,23 @@
         </section>
 
     </header>
+    <div class="linea"> </div>
+    <div class="linea1"> </div>
+    <div class="linea2"> </div>
 
-    <section class="section_1">
+    <!-- <section class="section_1">
         <h2>Se abren las oportunidades para todo <span>inversor visionario</span>
         </h2>
 
-    </section>
+    </section> -->
     <main class="main">
         <div class="overlay">
             <section class="section_2 card">
-                <img src="./assets/cm-005.png" alt="">
+                <div class="imagen">
+                    <img src="./assets/cm-005.png" alt="">
+                    <p>OPORTUNIDAD</p>
+                </div>
+
                 <p>En <span>pleno auge </span>de la Agricultura peruana, <span>invertir bien</span> es invertir en las
                     necesidades de
                     un
@@ -69,14 +76,25 @@
             </section>
 
             <section class="section_3 card">
+                <div class="imagen">
+                    <img src="./assets/im003.jpeg" alt="">
+                    <p>VISIÓN</p>
+
+                </div>
+
                 <p>Los que hacen no solo <span>ven retornar su inversión</span> de manera rápida, sino que
                     <span>multiplican su capital</span>.
                 </p>
-                <img src="./assets/im003.jpeg" alt="">
+
 
             </section>
             <section class="section_4 card">
-                <img src="./assets/banner_img/b_001.jpg" alt="">
+                <div class="imagen">
+                    <img src="./assets/banner_img/b_001.jpg" alt="">
+                    <p>INVERSIÓN</p>
+
+                </div>
+
                 <p class="typewriter">Muchos invierten en sembrar y pocos invierten en <span>satisfacer las
                         necesidades</span> de los
                     que siembran y del
@@ -91,8 +109,25 @@
         </div>
 
     </main>
-    <article class="article">
+    <!-- <article class="article1">
+        <h2>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un sector en crecimiento?</h2>
+
+    </article> -->
+    <article class="article2">
         <h2>¡Descubre cómo hacerlo en Nuestro Webinar <strong>Exclusivo</strong>!</h2>
+
+    </article>
+    <article class="article1">
+        <h3 style="font-size: 30px;
+        text-align: center;
+        font-weight: 700;
+        padding-top: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
+        color: white;
+       ">Donde aprenderás como puedes ser socio de una cámara de maduración y disfrutar de las utilidades que ésta
+            genera sin preocuparte por labores operativas y comerciales y teniendo el control y el conocimiento en
+            tiempo real de tu inversión. </h3>
 
     </article>
     <article class="contador">
@@ -156,7 +191,7 @@
     <!-- MAILCHIMP -->
 
     <section class="section_5">
-        <h2>¿Por qué deberías unirte a nuestro webinar?
+        <h2>¿Por qué deberías unirte <br> a nuestro webinar?
         </h2>
 
     </section>
@@ -165,25 +200,37 @@
             <div class="accordion-item">
                 <div class="accordion-header">✅Conoce el potencial de <span>rentabilidad</span></div>
                 <div class="accordion-content">
-                    <p>📈 Aprende sobre el creciente mercado del <span>banano</span> y cómo puedes obtener ganancias tangibles desde el primer día brindando servicios para el sector bananero.</p>
+                    <p>📈 Aprende sobre el creciente mercado del <span>banano</span> y cómo puedes obtener ganancias
+                        tangibles desde el primer día brindando servicios para el sector bananero.</p>
                 </div>
             </div>
             <div class="accordion-item">
-                <div class="accordion-header">✅Entiende el impacto de la <span>Demanda</span> y <span>Oferta</span></div>
+                <div class="accordion-header">✅Entiende el impacto de la <span>Demanda</span> y <span>Oferta</span>
+                </div>
                 <div class="accordion-content">
-                    <p>🍌 Obtén información valiosa sobre el crecimiento del consumo de <span>banano</span> en Perú y la demanda insatisfecha de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende cómo esta brecha entre la demanda y la oferta puede ser una oportunidad de inversión <span>lucrativa</span> para ti.</p>
+                    <p>🍌 Obtén información valiosa sobre el crecimiento del consumo de <span>banano</span> en Perú y la
+                        demanda insatisfecha de servicios de maduración en ciudades como Lima, Arequipa, Trujillo,
+                        Piura. Comprende cómo esta brecha entre la demanda y la oferta puede ser una oportunidad de
+                        inversión <span>lucrativa</span> para ti.</p>
                 </div>
             </div>
             <div class="accordion-item">
-                <div class="accordion-header">✅Descubre una <span>Alternativa Rentable</span> a la Agricultura Tradicional</div>
+                <div class="accordion-header">✅Descubre una <span>Alternativa Rentable</span> a la Agricultura
+                    Tradicional</div>
                 <div class="accordion-content">
-                    <p>🚜 Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de participar en el negocio de servicios de maduración de <span>banano</span>. Aprende por qué esta alternativa ofrece ingresos constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho más corto.</p>
+                    <p>🚜 Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de
+                        participar en el negocio de servicios de maduración de <span>banano</span>. Aprende por qué esta
+                        alternativa ofrece ingresos constantes desde el primer día y cómo puedes recuperar tu inversión
+                        en un plazo mucho más corto.</p>
                 </div>
             </div>
             <div class="accordion-item">
-                <div class="accordion-header">✅Explora las <span>Ventajas Competitivas</span> del Servicio de Maduración</div>
+                <div class="accordion-header">✅Explora las <span>Ventajas Competitivas</span> del Servicio de Maduración
+                </div>
                 <div class="accordion-content">
-                    <p>🔄 Entiende por qué el negocio de maduración de <span>banano</span> ofrece un flujo de ingresos continuo y cómo puedes diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
+                    <p>🔄 Entiende por qué el negocio de maduración de <span>banano</span> ofrece un flujo de ingresos
+                        continuo y cómo puedes diversificar tu inversión al albergar otras frutas en distintas
+                        temporadas.</p>
                 </div>
             </div>
         </div>
@@ -193,6 +240,14 @@
     <section class="section_7">
         <img src="./assets/cm-007.webp" alt="">
 
+    </section>
+    <section class="section_8">
+        <h2>¡Regístrate Ahora para Asegurar tu Lugar en Nuestro Webinar Exclusivo y Toma el Control de tu Futuro Financiero!</h2>
+    </section>
+
+    <section class="section_9">
+        <a href="#contacto">QUIERO REGISTRARME</a>
+        
     </section>
 
 
