--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -238,7 +238,7 @@
 
     </section>
     <section class="section_7">
-        <img src="./assets/cm-007.webp" alt="">
+        <img src="./assets/im001.jpeg" alt="">
 
     </section>
     <section class="section_8">
