--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -1,12 +1,289 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webinar exclusivo</title>
+    <link rel="icon" href="./assets/logo.svg">
+    <title>Webinar exlusivo</title>
+    <link rel="stylesheet" href="./css/webinar_maduracion.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
+
+    <!-- SWIPER CSS-->
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 </head>
+
 <body>
-    
-    
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+
+    <header>
+
+        <section class="banner">
+            <div class="banner-content">
+                <div class="text_content">
+
+
+                    <div class="text_01">
+                        <img class="logo" src="./assets/logo_negativo.png" alt="logo">
+                        <h1>Las cámaras de maduración de banano</h1>
+                        <h2>Un negocio rentable en el boom agrícola</h2>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+    </header>
+    <div class="linea"> </div>
+    <div class="linea1"> </div>
+    <div class="linea2"> </div>
+
+    <!-- <section class="section_1">
+        <h2>Se abren las oportunidades para todo <span>inversor visionario</span>
+        </h2>
+
+    </section> -->
+    <main class="main">
+        <div class="overlay">
+            <section class="section_2 card">
+                <div class="imagen">
+                    <img src="./assets/cm-005.png" alt="">
+                    <p>OPORTUNIDAD</p>
+                </div>
+
+                <p>
+                    Mientras otros <span> invierten en sembrar</span>, pocos invierten en satisfacer las <span>necesidades</span> de los que
+                    siembran y del producto cosechado: <span>¡Los servicios de conservación y maduración!</span> Ahí es donde la
+                    demanda supera a la oferta y <span>se abren las oportunidades</span> para todo inversor visionario.
+                </p>
+
+            </section>
+
+
+
+        </div>
+
+    </main>
+    <!-- <article class="article1">
+        <h2>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un sector en crecimiento?</h2>
+
+    </article> -->
+    <!-- <article class="article2">
+        <h2>¡Descubre cómo hacerlo en Nuestro Webinar <strong>Exclusivo</strong>!</h2>
+
+    </article> -->
+    <article class="article1">
+        <h3 style="font-size: 40px;
+        text-align: center;
+        font-weight: 700;
+        padding-top: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
+        color: white;
+       ">Invertir bien y con visión es: Invertir en las necesidades de un sector que crece de manera acelerada y que
+            aún
+            pocos inversionistas lo hacen. </h3>
+
+    </article>
+
+    <article class="article1" style="background-color: #005E6C;">
+        <h3 style="font-size: 40px;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: 700;
+        padding-top: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
+        color: white;
+       ">¡Regístrate ahora para nuestro Webinar Exclusivo y descubre cómo el negocio del banano puede transformar tu
+            vida financiera! </h3>
+
+    </article>
+    <article class="contador">
+        <div id="countdown"></div>
+    </article>
+
+
+    <!-- MAILCHIMP -->
+    <section class="container section_div" id="contacto">
+        <div id="mc_embed_shell">
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+
+            <div id="mc_embed_signup">
+                <form
+                    action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank">
+                    <div id="mc_embed_signup_scroll" class="animate-bg">
+                        <h4>Suscríbete</h4>
+                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                        <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
+                                    class="asterisk">*</span></label><input type="email" name="EMAIL"
+                                class="required email" id="mce-EMAIL" required="" value=""></div>
+                        <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
+                                name="FNAME" class=" text" id="mce-FNAME" value=""></div>
+                        <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input type="text"
+                                name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+                        <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
+                        <div id="mce-responses" class="clear foot">
+                            <div class="response" id="mce-error-response" style="display: none;"></div>
+                            <div class="response" id="mce-success-response" style="display: none;"></div>
+                        </div>
+                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                            <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
+                        </div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                    value="Enviar">
+                                <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
+                                        title="Mailchimp - email marketing made easy and fun"><span
+                                            style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                                class="refferal_badge"
+                                                src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                alt="Intuit Mailchimp"
+                                                style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+            <script
+                type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+        </div>
+
+
+    </section>
+
+    <article class="article1" style="background-color: #005E6C;">
+        <h3 class="fecha" style="font-size: 40px;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: 700;
+        padding-top: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
+        color: white;
+       ">
+
+            📅 Fecha del Webinar: Sabado 22 de febrero <br>
+            📍 Lugar: Desde la comodidad de tu hogar
+
+
+        </h3>
+
+    </article>
+
+    <!-- MAILCHIMP -->
+
+    <section class="section_5" style="
+    height: 100px;">
+        <h2>¿Qué verás en este webinar?
+        </h2>
+
+    </section>
+    <section class="section_6" style="width: 100%;
+    height: 500px;
+    font-size: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;">
+    <div  class="maduracion_check" style="width: 1000px; padding-top: 100px;">
+        <div>✅Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</div>
+        <div>✅Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</div>
+        <div>✅Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</div>
+        <div>✅Oportunidad de hacer preguntas en vivo durante el webinar.</div>
+
+    </div>
+  
+
+
+    </section>
+    <section class="section_7">
+        <img src="./assets/im001.jpeg" alt="">
+
+    </section>
+    <section class="section_8">
+        <h2>¡Regístrate Ahora para Asegurar tu Lugar en Nuestro Webinar Exclusivo y Toma el Control de tu Futuro
+            Financiero!</h2>
+    </section>
+
+    <section class="section_9">
+        <a href="#contacto">REGISTRATE</a>
+
+    </section>
+
+
+    <footer class="footer">
+        <div class="section__container footer__container">
+            <div class="footer__col">
+                <h4>Vive Rentable</h4>
+                <p>
+                    La plataforma invita a los
+                    inversores a ser agentes de cambio en
+                    sectores como agroindustria,
+                    inmobiliario y tecnología. Transforma
+                    las inversiones en acciones, brindando
+                    oportunidades para participar en
+                    proyectos monumentales y ser
+                    protagonistas de historias de éxito.
+                </p>
+                <div class="footer__socials">
+                    <span>
+                        <a href="https://www.facebook.com/viverentable" target="_blank"><i
+                                class="ri-facebook-circle-fill"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.instagram.com/vive_rentable/" target="_blank"><i
+                                class="ri-instagram-line"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i
+                                class="ri-tiktok-fill"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.linkedin.com/company/vive-rentable/" target="_blank"><i
+                                class="ri-linkedin-fill"></i></a>
+                    </span>
+                </div>
+            </div>
+
+            <div class="footer__col">
+                <h4>Contacto</h4>
+                <a href="#contact">
+                    <span><i class="ri-mail-line"></i></span> info@vive-rentable.com
+                </a>
+                <a href="https://wa.link/garf4f" target="_blank">
+                    <span><i class="ri-phone-line"></i></span>947548260
+                </a>
+            </div>
+        </div>
+        <div class="footer__bar">
+            Copyright © 2024 vive-rentable.com All rights reserved.
+        </div>
+    </footer>
+
+
+
+    <script src="/js/main.js"></script>
+
 </body>
+
 </html>
